--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ permalink:           pretty
 # Setup
 title:               askkaz
 tagline:             'A place for my musings'
-description:         'Somewhere to practice writing and talk about my transition from aerospace to software development'
+description:         'Practicing writing by documenting the transition from aerospace engineering to software development'
 url:                 http://askkaz.com
 baseurl:             ''
 paginate:            5
